fix: align badge on sidebar

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -194,11 +194,11 @@ table > thead {
 
     > .cs-badge {
       font-size: 9px;
-      width: 15px;
-      height: 15px;
+      width: 16px;
+      height: 16px;
       border-radius: 50%;
       text-align: center;
-      line-height: 13px;
+      line-height: 16px;
       background: #f7c137;
       position: absolute;
       top: 2px;
